--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -155,7 +155,7 @@ HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 			{
 				var config = 
 				{
-					size: undefined != size ? size : 120,
+					size: (undefined != size && size > 0) ? size : 120,
 					label: label,
 					min: undefined != min ? min : 0,
 					max: undefined != max ? max : 100,
