--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -668,7 +668,7 @@
 			//============================
 			//		for debugging
 
-			//setupSpecificTable("DesktopIconTable","2",""); return;
+			// setupSpecificTable("DTCInterfaceTable","27",""); return;
 			//setupSpecificTable("XDAQContextTable","2","setupTableViewMode('anchorTag-XDAQContextTable');"); return;
 
 			//setupSpecificTableGroup("artdaqFclTest","46","","anchorTag-RawDataSaverConsumerTable"); return;			
@@ -6309,6 +6309,20 @@
 		//tableCopyOrMoveRow
 		function tableCopyOrMoveRow(deleteSrc) 
 		{
+			var numberOfCopies = 1;
+			if(!deleteSrc)
+			{
+				//propmpt for number of copies
+				numberOfCopies = prompt("How many copy instances would you like (default: 1)?",1);
+				if (numberOfCopies)
+					numberOfCopies = numberOfCopies|0;
+				else //prompt was cancelled
+				{
+					Debug.warn("The copy operation was cancelled by the user.");
+					return;
+				}
+				Debug.logv({numberOfCopies});
+			}
 			var src = document.getElementById("copyAndMoveRowsSrc").value | 0;
 			var dest = document.getElementById("copyAndMoveRowsDest").value | 0;
 			var srcCount = document.getElementById("copyAndMoveRowsSrcCount").value | 0;
@@ -6345,7 +6359,7 @@
 
 					//handle adding new rows
 					if (newr - _CONFIG_DATA_ROW_OFFSET >= dest &&
-						newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount)
+						newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount * numberOfCopies)
 					{
 						//add new empty TD row
 						var newRowArr = [];
@@ -6356,7 +6370,7 @@
 						++newr;
 
 						//if this is not last row added, continue adding
-						if (newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount)
+						if (newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount * numberOfCopies)
 						{
 							--r;
 							continue;
@@ -6378,16 +6392,18 @@
 
 				//copy source values to dest values
 				if (src >= dest) //account for source index being pushed back
-					src += srcCount;
+					src += srcCount * numberOfCopies;
 
-				for (var r = 0; r < srcCount; ++r) 
+				for (var r = 0; r < srcCount * numberOfCopies; ++r) 
 				{
 					for (var c = 0; c < rows[0].childNodes.length; ++c) 
 					{
-						val = cols[_CONFIG_DATA_ROW_OFFSET + src + r][c].innerHTML;
+						val = cols[_CONFIG_DATA_ROW_OFFSET + src + (r % srcCount)][c].innerHTML;
 
-						if (colTypes[c] == "UID" || colTypes[c] == "UniqueData") 
+						//if copying, keep unique columns unique
+						if (!deleteSrc &&  (colTypes[c] == "UID" || colTypes[c] == "UniqueData"))
 						{
+							
 							//create array for existing unique values
 							uniqueVals = [];
 							for (var rr = _CONFIG_DATA_ROW_OFFSET; rr < cols.length; ++rr)
@@ -6423,14 +6439,14 @@
 					for (var r = 0, newr = 0, tmpColsIndex = 0; r < tmpCols.length + 1 + 1; ++r) //+1 for th, and +1 for new block of rows
 					{
 						if (newr - _CONFIG_DATA_ROW_OFFSET >= dest &&
-							newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount) 
+							newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount * numberOfCopies) 
 						{
 							//create default col cell to new row
 							cols[c][newr] = document.createElement("td");
 							++newr;
 
 							//if this is not last row added, continue adding
-							if (newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount) 
+							if (newr - _CONFIG_DATA_ROW_OFFSET < dest + srcCount * numberOfCopies) 
 							{
 								--r;
 								continue;
@@ -6450,15 +6466,16 @@
 
 				//copy source values to dest values
 				if (src >= dest) //account for source index being pushed back
-					src += srcCount;
-				for (var r = 0; r < srcCount; ++r) 
+					src += srcCount * numberOfCopies;
+
+				for (var r = 0; r < srcCount * numberOfCopies; ++r) 
 				{
 					for (var c = 0; c < rows.length; ++c) 
 					{
-						val = cols[c][_CONFIG_DATA_ROW_OFFSET + src + r].innerHTML;
+						val = cols[c][_CONFIG_DATA_ROW_OFFSET + src + (r % srcCount)].innerHTML;
 
-
-						if (colTypes[c] == "UID" || colTypes[c] == "UniqueData")
+						//if copying, keep unique columns unique
+						if (!deleteSrc &&  (colTypes[c] == "UID" || colTypes[c] == "UniqueData"))
 						{
 							//create array for existing unique values
 							uniqueVals = [];
